--- a/flex.css
+++ b/flex.css
@@ -7,3 +7,14 @@
 .flex {
     margin: 10px;
 }
+
+.flexOne {
+    display: flex;
+    justify-content: flex-start;
+    
+}
+
+.flexOne > .square{
+    margin: 5px;
+    
+}
