--- a/flex.css
+++ b/flex.css
@@ -18,3 +18,16 @@
     margin: 5px;
     
 }
+
+.flexTwo {
+    display: flex;
+    flex-direction: column;
+ 
+}
+
+
+.flexTwo > .square{
+    margin: 2px;
+    
+}
+
